--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context="com.example.android.justjava.MainActivity">
 
     <TextView
@@ -16,6 +17,14 @@
         android:textColor="#848383"
         android:textSize="16sp" />
 
+    <Button
+        android:id="@+id/increment_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:onClick="increment"
+        android:padding="8dp"
+        android:text="+" />
+
     <TextView
         android:id="@+id/quantity_text_view"
         android:layout_width="wrap_content"
@@ -24,6 +33,14 @@
         android:text="0"
         android:textColor="@android:color/black"
         android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/decrement_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:onClick="decrement"
+        android:padding="8dp"
+        android:text="-" />
 
     <TextView
         android:id="@+id/price_tag_view"
