--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="8dp"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    android:paddingBottom="8dp"
     android:orientation="vertical"
-
-    tools:context="com.example.android.justjava.MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/quantity_tag_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:text="QUANTITY"
         android:textAllCaps="true"
         android:textColor="#848383"
         android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/increment_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:onClick="increment"
-        android:padding="8dp"
-        android:text="+" />
+    <LinearLayout
 
-    <TextView
-        android:id="@+id/quantity_text_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="0"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/decrement_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:onClick="decrement"
-        android:padding="8dp"
-        android:text="-" />
+        <Button
+            android:id="@+id/increment_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="increment"
+            android:padding="8dp"
+            android:text="+" />
+
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="0"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/decrement_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="decrement"
+            android:padding="8dp"
+            android:text="-" />
+
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/price_tag_view"
@@ -52,8 +64,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="PRICE"
-        android:textColor="#848383"
         android:textAllCaps="true"
+        android:textColor="#848383"
         android:textSize="16sp" />
 
 
