--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,31 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/toppings_tag_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="toppings"
+        android:textAllCaps="true"
+        android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/checkbox_whipped_cream"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="24dp"
+        android:text="Whipped Cream"
+        android:layout_marginTop="8dp"
+        android:onClick="whippedCream"
+        android:textSize="16sp"/>
+
+    <TextView
         android:id="@+id/quantity_tag_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:text="QUANTITY"
@@ -34,14 +56,15 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:onClick="increment"
-            android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
             android:text="+" />
 
         <TextView
             android:id="@+id/quantity_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:layout_marginTop="8dp"
             android:text="0"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -51,7 +74,8 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:onClick="decrement"
-            android:padding="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
             android:text="-" />
 
 
