--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,6 +14,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
+
+    <EditText
+        android:id="@+id/edit_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textCapWords"
+        android:hint="Enter your name"/>
 
     <TextView
         android:id="@+id/toppings_tag_view"
@@ -27,11 +37,21 @@
         android:id="@+id/checkbox_whipped_cream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+
         android:paddingStart="24dp"
         android:text="Whipped Cream"
+        android:textSize="16sp" />
+
+    <CheckBox
+        android:id="@+id/checkbox_chocolate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:onClick="whippedCream"
-        android:textSize="16sp"/>
+
+        android:paddingStart="24dp"
+        android:text="Chocolate"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/quantity_tag_view"
@@ -52,34 +72,43 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/increment_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="increment"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="8dp"
-            android:text="+" />
+    android:id="@+id/increment_button"
+    android:layout_width="48dp"
+    android:layout_height="48dp"
+    android:onClick="increment"
+    android:layout_marginTop="8dp"
+    android:layout_marginRight="8dp"
+    android:text="+" />
 
-        <TextView
-            android:id="@+id/quantity_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="0"
-            android:textColor="@android:color/black"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/quantity_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="0"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 
-        <Button
-            android:id="@+id/decrement_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:onClick="decrement"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:text="-" />
+    <Button
+        android:id="@+id/decrement_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:onClick="decrement"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="-" />
 
 
-    </LinearLayout>
+</LinearLayout>
+
+
+
+
+
+
+
+
+
 
 
     <TextView
@@ -112,4 +141,15 @@
         android:text="ORDER" />
 
 
+
+
+
+
+
+
+
+
+
+
 </LinearLayout>
+</ScrollView>
