--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,153 +3,136 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
-    <EditText
-        android:id="@+id/edit_name"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textCapWords"
-        android:hint="Enter your name"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/toppings_tag_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="toppings"
-        android:textAllCaps="true"
-        android:textSize="16sp" />
+        <EditText
+            android:id="@+id/edit_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_your_name"
+            android:imeOptions="actionDone"
+            android:inputType="textCapWords" />
 
-    <CheckBox
-        android:id="@+id/checkbox_whipped_cream"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        <TextView
+            android:id="@+id/toppings_tag_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/toppings"
+            android:textAllCaps="true"
+            android:textSize="16sp" />
 
-        android:paddingStart="24dp"
-        android:text="Whipped Cream"
-        android:textSize="16sp" />
+        <CheckBox
+            android:id="@+id/checkbox_whipped_cream"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
 
-    <CheckBox
-        android:id="@+id/checkbox_chocolate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+            android:paddingStart="24dp"
+            android:text="@string/whipped_cream"
+            android:textSize="16sp" />
 
-        android:paddingStart="24dp"
-        android:text="Chocolate"
-        android:textSize="16sp" />
+        <CheckBox
+            android:id="@+id/checkbox_chocolate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
 
-    <TextView
-        android:id="@+id/quantity_tag_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:text="QUANTITY"
-        android:textAllCaps="true"
-        android:textColor="#848383"
-        android:textSize="16sp" />
+            android:paddingStart="24dp"
+            android:text="@string/chocolate"
+            android:textSize="16sp" />
 
-    <LinearLayout
+        <TextView
+            android:id="@+id/quantity_tag_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/quantity"
+            android:textAllCaps="true"
+            android:textColor="#848383"
+            android:textSize="16sp" />
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/increment_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="increment"
+                android:text="@string/plus" />
+
+            <TextView
+                android:id="@+id/quantity_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="0"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/decrement_button"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:onClick="decrement"
+                android:text="@string/minus" />
+
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/price_tag_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/order_summary"
+            android:textAllCaps="true"
+            android:textColor="#848383"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/order_summary_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="@string/defualt_amount"
+            android:textColor="@android:color/black"
+            android:textSize="16sp" />
+
 
         <Button
-    android:id="@+id/increment_button"
-    android:layout_width="48dp"
-    android:layout_height="48dp"
-    android:onClick="increment"
-    android:layout_marginTop="8dp"
-    android:layout_marginRight="8dp"
-    android:text="+" />
-
-    <TextView
-        android:id="@+id/quantity_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="0"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/decrement_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:onClick="decrement"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:text="-" />
+            android:id="@+id/order_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="submitOrder"
+            android:padding="8dp"
+            android:text="@string/order" />
 
 
-</LinearLayout>
-
-
-
-
-
-
-
-
-
-
-
-    <TextView
-        android:id="@+id/price_tag_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="Order Summary"
-        android:textAllCaps="true"
-        android:textColor="#848383"
-        android:textSize="16sp" />
-
-
-    <TextView
-        android:id="@+id/order_summary_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="$0"
-        android:textColor="@android:color/black"
-        android:textSize="16sp" />
-
-
-    <Button
-        android:id="@+id/order_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="submitOrder"
-        android:padding="8dp"
-        android:text="ORDER" />
-
-
-
-
-
-
-
-
-
-
-
-
-</LinearLayout>
+    </LinearLayout>
 </ScrollView>
