--- a/app/src/main/res/values-ja-v21/styles.xml
+++ b/app/src/main/res/values-ja-v21/styles.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) Adrian Raff AKA Fr0stsp1re 2018. Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
   ~                            The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
@@ -5,22 +6,13 @@
   -->
 
 <resources>
-    <string name="app_name">ジャストジャバ</string>
-    <string name="name_tag">名前= &#160;</string>
-    <string name="whipped_cream_tag">ホイップクリームを加える= &#160;</string>
-    <string name="chocolate_tag">チョコレートを加える= &#160;</string>
-    <string name="quantity_tag">量： &#160;</string>
-    <string name="total_tag">合計 $ &#160;</string>
-    <string name="thank_you_tag">ありがとうございました！</string>
-    <string name="email_subject">ちょうどJava電子メールの順序</string>
-    <string name="msg_coffee">1〜100個のコーヒーしか注文できません。 ごめんなさい！</string>
-    <string name="enter_your_name">あなたの名前を入力してください</string>
-    <string name="toppings">トッピング</string>
-    <string name="whipped_cream">ホイップクリーム</string>
-    <string name="chocolate">チョコレート</string>
-    <string name="quantity">数量</string>
-    <string name="order_summary">チョコレート</string>
-    <string name="order">注文</string>
-    <string name="default_amount">$0</string>
 
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+
+
+        <item name="colorPrimary">@color/DeepBlue</item>
+        <item name="colorAccent">@color/blueAccent200</item>
+        <item name="colorPrimaryDark">@color/MegaBlue</item>
+    </style>
 </resources>
